# pointline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  KLINE_IMPLEMENTATION_SUMMARY.md  KLINE_SCHEMA_UPDATE.md  PLANS.md  README.md  RESEARCH_FRAMEWORK_SUMMARY.md  design.md  download_derivative_ticker.py  download_derivative_ticker.sh  download_missing_symbols.py  download_remaining_symbols.py  download_trades.py  explore_derivative_ticker.py  plan.md  pyproject.toml  query_derivative_ticker.py
.agent/: PROPOSALS.md
.claude/: settings.local.json
.execplans/: execplan-v2-final-cleanup.md  execplan-v2-post-ingest-compaction.md  execplan-v2-quant360-upstream-adapter.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.proposals/: adaptive-timeframe-features-mft-research-proposal.md  chinese-stock-l3-mft-features-supplement.md  chinese-stock-l3-mft-features.md  cotrading-h1-implementation.md  cotrading-networks-chinese-stocks.md  crypto-mft-research-program-proposal.md  crypto-mm-researcher-skill-proposal.md  funding-rate-features-mft-research-proposal.md  multitimeframe-features-mft-research-proposal.md  options-volatility-surface-proposal.md  perp-spot-features-mft-research-proposal.md  t1-adverse-selection-cotrading-integration.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: README.md  SHIPPING_QUICKSTART.md  bronze-prehooks-implementation.md  ci-cd.md  cli-migration-plan.md  implementation-plan-context-risk-layer.md  implementation-plan-resample-aggregate-corrected.md  implementation-plan-resample-aggregate.md  persona-prompts.md  quickstart.md  research_api_guide.md  roles-and-responsibilities.md  schemas.md  shipping-guide.md  skills-integration.md  troubleshooting.md  tushare-integration-plan.md  tutorial.md  user-friendliness-review.md  vendor-plugin-quick-reference.md  vendor-plugin-system.md
examples/: cotrading_networks_cn_example.py  crypto_adaptive_timeframe_example.py  crypto_cross_exchange_arbitrage_example.py  crypto_mft_funding_features_example.py  crypto_mft_multitimeframe_example.py  crypto_mft_volume_bars_example.py  crypto_perp_spot_comparison_example.py  discovery_example.py  ingest_quant360_batch.py  ingest_tardis_grouped.py  query_api_example.py  resampling_methods_demo.py
examples_archived/: crypto_adaptive_timeframe_example.py  query_api_example.py  resampling_methods_demo.py
l2_replay/: Cargo.toml  PLAN_FEATURE_ENGINE.md
l2_replay/src/: arrow_utils.rs  io.rs  lib.rs  ops.rs  python_binding.rs  replay.rs  types.rs  utils.rs
l2_replay/tests/: l2_state_checkpoint_delta.rs  perf_book_update.rs
notes/: cn_ashare_trading_rules_and_t0_strategies.md  convertible_bonds_cn_ashare_trading.md  convertible_bonds_t0_l3_strategy.md  cross-dataset-alpha-signals.md  futures_hft_cn_ashare_strategy.md  options-perp-arbitrage-deep-dive.md  statistical_arbitrage_cn_ashare_feasibility.md  t0_etf_top_quant_firms_analysis.md  t1-rotation-dataset-requirements.md  t1-rotation-strategy.md  t1-stock-selection-model-comparison.md
pointline/: __init__.py  _error_messages.py  book_snapshots.py  cli.py  config.py  dim_asset_stats.py  dim_symbol.py  encoding.py  introspection.py  l2_replay.py  l2_snapshot_index.py  l2_state_checkpoint.py  l2_updates.py  protocols.py  quotes.py  registry.py  research.py  schema_registry.py  symbol_normalization.py  trades.py  types.py  validation_utils.py
research/: README.md
schemas/: quant_research_input.v1.json  quant_research_input.v2.json  quant_research_output.v1.json  quant_research_output.v2.json  quant_research_workflow_input.v2.json  quant_research_workflow_output.v2.json
scripts/: decompress_quant360_archives.py  diagnose_date_issue.py  diagnose_replay_bottleneck.py  download_datasets.py  ingest_bitmex_derivative_ticker.py  ingest_deribit_liquidations.py  ingest_deribit_options_chain.py  ingest_klines.py  ingest_v2_quant360_partition.py  migrate_dim_symbol_add_exchange.py  migrate_schema_20260202.py  profile_replay_performance.py  reorganize_quant360.py  (+9 more)
(+632 files in other folders)
