[project]
name = "pointline"
version = "0.1.0"
description = "Point-in-time data lake design and ETL utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20",
  "deltalake>=0.15",
  "pyarrow>=14.0",
  "requests>=2.31",
]

[project.scripts]
pointline = "pointline.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "l2_replay/Cargo.toml"
features = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
