[project]
name = "pointline"
version = "0.1.0"
description = "Point-in-time data lake design and ETL utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20",
  "deltalake>=0.15",
  "pyarrow>=14.0",
  "requests>=2.31",
  "tardis-dev>=2.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pointline = "pointline.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
