[project]
name = "pointline"
version = "0.1.0"
description = "Point-in-time data lake design and ETL utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20",
  "deltalake>=0.15",
  "pyarrow>=14.0",
  "requests>=2.31",
  "tardis-dev>=2.0",
  "tushare==1.4.24",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pointline = "pointline.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
  "bandit[toml]>=1.7",
  "pre-commit>=3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pointline*"]
exclude = ["tests*", "docs*", "research*", "conductor*", "skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["pointline"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",    # line too long (handled by formatter)
  "N806",    # variable in function should be lowercase (allow CONSTANTS)
  "B904",    # exception chaining (optional style)
  "SIM102",  # nested if (sometimes clearer as is)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
