[package]
name = "l2_replay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "l2_replay"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
python = ["pyo3/extension-module"]

[dependencies]
anyhow = "1"
arrow = { version = "50", features = ["ffi"] }
chrono = { version = "=0.4.34", default-features = false, features = ["alloc", "std"] }
deltalake = { version = "0.17", features = ["datafusion"] }
futures = "0.3"
pyo3 = { version = "0.21", optional = true, features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
chrono = { git = "https://github.com/chronotope/chrono", tag = "v0.4.34" }
